@@ -551,6 +551,10 @@ public:
     /// @brief Return the inital default name of the op.
     /// @note An empty first name will disable, reverting to the usual rules.
     virtual std::string getFirstName(const OpFactory&) { return ""; }
+
+    /// @brief Return the tab sub-menu path of the op.
+    /// @note An empty path will disable, reverting to the usual rules.
+    virtual std::string getTabSubMenuPath(const OpFactory&) { return ""; }
 };
 
 
