@@ -44,6 +44,8 @@ Version 6.1.1 - In development
       from tab menus.
     - Added methods to store parent name and visibility of native SOPs to
       @b openvdb_houdini::OpenVDBOpFactory.
+    - Added a houdini_utils::OpPolicy::getTabSubMenuPath() method to allow
+      OpPolicy subclasses to provide their own tab sub-menu path.
 
 
 Version 6.1.0 - May 8, 2019
